# dracuda

./: .gitignore  README.md  index.html  params.json  writeup.txt
custom_scenes/: cornell_box_animated.scene  cornell_box_glossy.scene  cornell_box_motion_blur.scene  csg.scene  csg_cube.scene  cube_bump.scene  envmap.scene  spheres_specular_highlight.scene  stacks_corrected.scene  stacks_dof.scene
extra/: cornell_box_dragon2.scene  cornell_box_orange2.scene  dragon.scene
scenes/: cornell_box_mod.scene  dra_spheres.scene  pool.scene  pool_mod.scene
scripts/: copy_data.bat
src/: CMakeLists.txt
src/application/: CMakeLists.txt  application.cpp  scene_loader.cpp
src/glew/: CMakeLists.txt
src/math/: CMakeLists.txt  camera.cpp  camera.hpp  color.cpp  color.hpp  math.hpp  matrix.cpp  matrix.hpp  quaternion.cpp  quaternion.hpp  random462.cpp  random462.hpp  vector.cpp  vector.hpp
src/p3/: CMakeLists.txt  Link to master.hpp  Makefile  PoolScene.cpp  PoolScene.hpp  application.cpp  application.hpp  base64.cpp  base64.h  camera_roam.cpp  camera_roam.hpp  collisions.cpp  collisions.hpp  constants.cpp  constants.hpp  cudaScene.hpp  cudavector.h  helper_math.h  imageio.cpp  imageio.hpp  load_balancer.cpp  load_balancer.hpp  main.cpp  master.cpp  master.hpp  message.hpp  modelbody.cpp  modelbody.hpp  options.hpp  photon.cpp  photonmap.cpp  physics.cpp  physics.hpp  planebody.cpp  planebody.hpp  randomgeo.cpp  raytracer.cpp  raytracer.hpp  raytracer_application.hpp  raytracer_cuda.cu  (+18 more)
src/scene/: .sphere.cpp.swo  CMakeLists.txt  animator.cpp  animator.hpp  bound.cpp  bound.hpp  csg.cpp  csg.hpp  csgintervals.cpp  csgintervals.hpp  envmap.cpp  envmap.hpp  geometry.hpp  kdtree.cpp  kdtree.hpp  model.cpp  model.hpp  pool_controller.hpp  scene.cpp  scene.hpp  sphere.cpp  sphere.hpp  texture.cpp  texture.hpp  triangle.cpp  triangle.hpp  utils.cpp  utils.hpp
src/simdpp/: CTestTestfile.cmake  Makefile  cmake_install.cmake
